Worked on the exam mechanisms

--- a/javafx/src/main/resources/com/github/vatbub/examtrainer/bodge/javafx/editor/QuestionTypeSelector.fxml
+++ b/javafx/src/main/resources/com/github/vatbub/examtrainer/bodge/javafx/editor/QuestionTypeSelector.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane prefHeight="95.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.vatbub.examtrainer.bodge.javafx.QuestionTypeSelector">
+<AnchorPane prefHeight="95.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.vatbub.examtrainer.bodge.javafx.editor.QuestionTypeSelector">
    <children>
       <VBox layoutX="14.0" layoutY="14.0" spacing="10.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
          <children>
