--- a/javafx/src/main/resources/com/github/vatbub/examtrainer/bodge/javafx/MainWindow.fxml
+++ b/javafx/src/main/resources/com/github/vatbub/examtrainer/bodge/javafx/MainWindow.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-
-<AnchorPane prefHeight="84.0" prefWidth="822.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.vatbub.examtrainer.bodge.javafx.MainWindow">
+<AnchorPane prefHeight="84.0" prefWidth="822.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.vatbub.examtrainer.bodge.javafx.MainWindow">
    <children>
       <MenuBar layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem mnemonicParsing="false" onAction="#newFileMenuItemOnAction" text="New File" />
-                  <MenuItem mnemonicParsing="false" onAction="#openFileMenuItemOnAction" text="Open File" />
-                  <MenuItem fx:id="saveFileMenuItem" disable="true" mnemonicParsing="false" onAction="#saveFileMenuItemOnAction" text="Save" />
-                  <MenuItem fx:id="saveAsFileMenuItem" disable="true" mnemonicParsing="false" onAction="#saveAsFileMenuItemOnAction" text="Save as..." />
+                  <MenuItem mnemonicParsing="false" onAction="#newQuestionFileMenuItemOnAction" text="New Question File" />
+                  <MenuItem mnemonicParsing="false" onAction="#openQuestionFileMenuItemOnAction" text="Open Question File" />
+                  <MenuItem fx:id="saveFileMenuItem" disable="true" mnemonicParsing="false" onAction="#saveQuestionFileMenuItemOnAction" text="Save Question File" />
+                  <MenuItem fx:id="saveAsFileMenuItem" disable="true" mnemonicParsing="false" onAction="#saveAsQuestionFileMenuItemOnAction" text="Save Question File as..." />
+                  <MenuItem mnemonicParsing="false" onAction="#newResultFileMenuItemOnAction" text="New Result File" />
+                  <MenuItem mnemonicParsing="false" onAction="#openResultFileMenuItemOnAction" text="Open Result File" />
+                  <MenuItem fx:id="saveFileMenuItem1" disable="true" mnemonicParsing="false" onAction="#saveResultFileMenuItemOnAction" text="Save Result File" />
+                  <MenuItem fx:id="saveAsFileMenuItem1" disable="true" mnemonicParsing="false" onAction="#saveAsResultFileMenuItemOnAction" text="Save Result File as..." />
               <MenuItem mnemonicParsing="false" onAction="#closeMenuItemOnAction" text="Close" />
             </items>
           </Menu>
@@ -24,10 +28,10 @@
       </MenuBar>
       <HBox layoutX="111.0" layoutY="150.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0">
          <children>
-            <Button fx:id="launchExamButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#launchExamButtonOnAction" text="Launch exam" HBox.hgrow="ALWAYS" />
+            <Button fx:id="launchExamButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#launchExamButtonOnAction" text="Launch exam" HBox.hgrow="ALWAYS" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#viewSingleResultButtonOnAction" text="View Results of a single exam" HBox.hgrow="ALWAYS" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#viewOverallPerformanceButtonOnAction" text="View overall performance" HBox.hgrow="ALWAYS" />
-            <Button fx:id="editQuestionsButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#editQuestionsButtonOnAction" text="Edit questions" HBox.hgrow="ALWAYS" />
+            <Button fx:id="editQuestionsButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#editQuestionsButtonOnAction" text="Edit questions" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
    </children>
